<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_ajustes">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="731dp">

        <ScrollView
            android:layout_width="413dp"
            android:layout_height="587dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/favoritos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    app:contentPadding="16dp">

                    <TextView
                        android:id="@+id/favoritosTexto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/favoritos"
                        android:textSize="24sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/idioma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:contentPadding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/idioma"
                        android:textSize="24sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ayuda"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    app:contentPadding="16dp">

                    <TextView
                        android:id="@+id/ayudaTexto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ayuda"
                        android:textSize="24sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/notificaciones"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    app:contentPadding="16dp">

                    <TextView
                        android:id="@+id/notificacionesTexto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notificaciones"
                        android:textSize="24sp" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>